--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,10 @@ keras~=2.8.0 # changed on 28march
 tensorboard~=2.8.0 # changed on 28march
 tensorflow-estimator
 jinja2~=3.0.0
-typing-extensions
+typing-extensions~=4.2.0 # changed on 28march
 google-api-core[grpc]~=1.34.0
 fabric~=2.6.0
-optax==0.1.0
+optax==0.1.5
 dm-haiku==0.0.9
 ray[default]==1.13.0
 jax==0.3.25
